testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment2.errors.txt
a.js(6,14): error TS2339: Property 'x' does not exist on type 'I'.
a.js(9,12): error TS2749: 'Outer' refers to a value, but is being used as a type here. Did you mean 'typeof Outer'?
a.js(12,12): error TS2503: Cannot find namespace 'Outer'.


==== a.js (3 errors) ====
    function Outer() {
        this.y = 2
    }
    Outer.Inner = class I {
        constructor() {
            this.x = 1
                 ~
!!! error TS2339: Property 'x' does not exist on type 'I'.
        }
    }
    /** @type {Outer} */
               ~~~~~
!!! error TS2749: 'Outer' refers to a value, but is being used as a type here. Did you mean 'typeof Outer'?
    var ok
    ok.y
    /** @type {Outer.Inner} */
               ~~~~~
!!! error TS2503: Cannot find namespace 'Outer'.
    var oc
    oc.x
    